update docs and remove required cliente from pedido
